src/test/ui/static/static-items-cant-move.stderr
error[E0507]: cannot move out of static item
  --> $DIR/static-items-cant-move.rs:28:10
   |
LL |     test(BAR); //~ ERROR cannot move out of static item
   |          ^^^ cannot move out of static item

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
